kubernetes/acc/api-acc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-service
  name: web-service
spec:
  ports:
  - name: 5000-80
    port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: zorginzicht-acc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: zorginzicht-backend:1.0.0
        name: zorginzicht-backend
