kubernetes/acc/api-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-acc
  name: api-acc
spec:
  ports:
  - name: 5000-80
    port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    app: api
  type: ClusterIP
