kubernetes/acc/ingress-acc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-achmea
spec:
  rules:
    - host: zorgpolis.acc.docker.achmea.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-acc
                port:
                  number: 5000
